get system deck
